basic functionalities has been implemented. need to handle error for invalid video id.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 		<script src="js/youtube_video_test.js"></script>
 	</head>
 	<body>
-			<div id="ytplayer"></div>
-			<div id="player_controll"><button id="play_button">play</button><button id="pause_button">pause</button></div>
-			<div>Current Time: <span id="current_time">N/A</span></div>
+		<div id="video_id_input">
+			<div>
+				VIDEO ID: <input type="text" id="video_id" /> (jpLgD_DHEy0)
+			</div>
+			<div>
+				<button id="set_video_id">go</button>
+		</div>
+		<div id="ytplayer"></div>
+		<div id="player_controll"><button id="play_button">play</button><button id="pause_button">pause</button></div>
+		<div>Current Time: <span id="current_time">N/A</span></div>
+		<!-- <div id="ytplayer2"></div> -->
 	</body>
 </html>
